Added more info for each task

--- a/.github/workflows/generate-images-base.yml
+++ b/.github/workflows/generate-images-base.yml
@@ -1,6 +1,6 @@
 # This workflow generates images from drawio & PlantUML files and commits them to the trigger branch.
 
-name: Generate and Commit Techdocs Images
+name: Generate and Commit PlantUML & DrawIO images
 
 on:
   workflow_call:
