--- a/.github/workflows/generate-images.yml
+++ b/.github/workflows/generate-images.yml
@@ -1,7 +1,7 @@
 # This workflow is triggered when a pull request is opened with changes to PlantUML (in ts files) and drawio files.
 # It will generate images from the changed PlantUML and draw.io files, and commit them to the feature branch.
 
-name: Techdocs - Generate Images
+name: Generate Images used in documentation
 
 on:
   pull_request:
@@ -14,4 +14,4 @@ on:
 
 jobs:
   deploy:
-    uses: ./.github/workflows/techdocs-generate-images-base.yml
+    uses: ./.github/workflows/generate-images-base.yml
